<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Situation Awareness</string>
    <string name="action_settings">Settings</string>
    <string name="app_name_sair">Situation Awareness \n and \n Incident Reporting</string>
    <string name="title_activity_map_view">MapView</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_app_settings">AppSettings</string>
    <string name="title_activity_status">Status</string>
    <string name="title_activity_report">Create Report</string>
    <string name="app_settings">Settings</string>
    <string name="show_all_reports">Show All Reports</string>
    <string name="title_status">Status</string>
    <string name="title_settings">Settings</string>
    <string name="title_report">Create Report</string>
    <string name="title_activity_register">Register</string>
    <string name="username">Username</string>
    <string name="user_password">Password</string>
    <string name="group_id">Group ID</string>
    <string name="register_user">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="full_name">Full Name</string>
    <string name="observation_description_default">Describe your observations:</string>
    <string name="save_report">Report Observation</string>
    <string name="title_activity_report_view">ReportView</string>
    <string name="title_report_view">Report View</string>
    <string name="title_logout">Logout</string>
    <string name="menu_item_register">Register</string>
    <string name="menu_item_login">Login</string>
    <string name="map_view">Map View</string>
    <string name="title_activity_location_view">LocationView</string>
    <string name="location_view">Location View</string>
    <string name="auto_sync_text_view">Auto sync (minute):</string>
    <string name="text_save">save settings</string>
    <string name="last_sync_to_server">Last sync to server</string>
    <string name="current_location">Current location</string>
    <string name="not_reported_location_items">Not reported location items</string>
    <string name="not_reported_photos">Not reported photos</string>
    <string name="not_reported_text_items">Not reported text items</string>
    <string name="title_activity_image_display">ImageDisplay</string>
    <string name="title_activity_photo_view">PhotoView</string>
    <string name="attach_photo">Attach Photo</string>
    <string name="take_a_photo">Take a Photo</string>
    <string name="from_gallery">From Gallery</string>
    <string name="title_photo_report_view">Photo report</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="back">Back</string>
    <string name="add_marker">Add Marker</string>
    <string name="report_observation">Report observation</string>
    <string name="cancel">Cancel</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string-array name="options_list">
        <item>MapView</item>
        <item>LocationsView</item>
        <item>TextReportsView</item>
        <item>PhotoReportsView</item>
        <item>Send Text Report</item>
        <item>Status</item>
        <item>Settings</item>
        <item>Cach Map Tiles</item>
        <item>Logout</item>
    </string-array>
</resources>
