<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ffiandroid.situationawareness.controller.AllReportsView">
    <item
        android:id="@+id/menu_item_map_view"
        android:title="@string/map_view"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_report"
        android:title="@string/title_report"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_status"
        android:title="@string/title_status"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_app_settings"
        android:title="@string/title_settings"
        android:orderInCategory="100"
        app:showAsAction="never"/>
    <item
        android:id="@+id/menu_item_logout"
        android:title="@string/title_logout"
        android:orderInCategory="100"
        app:showAsAction="never"/>

    <item
        android:id="@+id/menu_item_status_and_send_button"
        android:title="Status and Send button"
        android:orderInCategory="100"
        app:showAsAction="ifRoom"/>
</menu>
