<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:layout_height="fill_parent">

    <EditText
        android:id="@+id/custom_dialog_box_des_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:hint="@string/title"/>

    <EditText
        android:id="@+id/custom_dialog_box_des_description"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/custom_dialog_box_des_title"
        android:layout_marginBottom="20dp"
        android:hint="@string/description"/>

    <TableRow
        android:id="@+id/table_row"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:weightSum="2"
        android:layout_alignParentBottom="true">

        <Button
            android:onClick="btnBackOnClick"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginRight="1dp"
            android:id="@+id/customDialogDesbtnBack"
            android:text="@string/back"/>

        <Button
            android:onClick="btnSaveOnClick"
            android:layout_weight="1"
            android:layout_height="50dp"
            android:layout_marginLeft="1dp"
            android:id="@+id/customDialogDesbtnSave"
            android:text="@string/save"/>

    </TableRow>
</RelativeLayout>